set celery defaults

--- a/development.ini
+++ b/development.ini
@@ -29,6 +29,11 @@ cache.short_term.expire = 60
 cache.default_term.expire = 300
 cache.long_term.expire = 3600
 
+CELERY_ACCEPT_CONTENT = ['json', 'msgpack', 'yaml']
+CELERY_DEFAULT_QUEUE = 'unicore_cms'
+CELERY_RESULT_BACKEND = redis://localhost:6379/0
+BROKER_URL = redis://localhost:6379/0
+
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
