--- a/development.ini
+++ b/development.ini
@@ -14,6 +14,8 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
+available_languages = [('eng_UK', 'English'), ('swh_KE', 'Swahili (Kenya)')]
+
 git.path = %(here)s/repo/
 
 beaker.cache.type = ext:memcached
