added other languages

--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-available_languages = [('eng_UK', 'English'), ('swh_KE', 'Swahili (Kenya)')]
+available_languages = [('eng_UK', 'English'), ('swh_KE', 'Swahili (Kenya)'), ('swh_TZ', 'Swahili (Tanzania)'), ('tha_TH', 'Thai'), ('ind_ID', 'Bahasa')]
 
 git.path = %(here)s/repo/
 
