enable celery always eager for dev

--- a/development.ini
+++ b/development.ini
@@ -31,6 +31,7 @@ cache.short_term.expire = 60
 cache.default_term.expire = 300
 cache.long_term.expire = 3600
 
+CELERY_ALWAYS_EAGER = true
 CELERY_ACCEPT_CONTENT = ['json', 'msgpack', 'yaml']
 CELERY_DEFAULT_QUEUE = 'unicore_cms'
 CELERY_RESULT_BACKEND = redis://localhost:6379/0
