--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
+services:
+  - elasticsearch
 install:
   - pip install -r requirements-dev.txt --use-wheel
   - pip install -e . --use-wheel
