--- a/development.ini
+++ b/development.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/environment.html
 ###
 
-[app:main]
+[app:cmsfrontend]
 use = egg:unicore-cms-ffl
 
 pyramid.reload_templates = true
@@ -17,6 +17,8 @@ pyramid.includes =
 available_languages = [('eng_UK', 'English'), ('swh_KE', 'Swahili (Kenya)'), ('swh_TZ', 'Swahili (Tanzania)'), ('tha_TH', 'Thai'), ('ind_ID', 'Bahasa')]
 
 git.path = %(here)s/repo/
+git.content_repo_url = https://github.com/universalcore/unicore-cms-content-ffl-tanzania
+es.index_prefix = 'ffl-tanzania'
 
 beaker.cache.type = ext:memcached
 beaker.cache.url = 127.0.0.1:11211
@@ -44,6 +46,10 @@ BROKER_URL = redis://localhost:6379/0
 ###
 # wsgi server configuration
 ###
+
+[pipeline:main]
+pipeline =
+    cmsfrontend
 
 [server:main]
 use = egg:waitress#main
