change locales in dev.ini

--- a/development.ini
+++ b/development.ini
@@ -10,11 +10,11 @@ pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
-pyramid.default_locale_name = en
+pyramid.default_locale_name = eng_GB
 pyramid.includes =
     pyramid_debugtoolbar
 
-available_languages = [('eng_UK', 'English'), ('swh_KE', 'Swahili (Kenya)'), ('swh_TZ', 'Swahili (Tanzania)'), ('tha_TH', 'Thai'), ('ind_ID', 'Bahasa')]
+available_languages = [('eng_GB', 'English'), ('swa_KE', 'Swahili (Kenya)'), ('swa_TZ', 'Swahili (Tanzania)'), ('tha_TH', 'Thai'), ('ind_ID', 'Bahasa')]
 
 git.path = %(here)s/repo/
 git.content_repo_url = https://github.com/universalcore/unicore-cms-content-ffl-tanzania
