--- a/development.ini
+++ b/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:cmsfrontend]
-use = egg:unicore-cms-ffl
+use = egg:unicore-cms-mnm
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -14,11 +14,11 @@ pyramid.default_locale_name = eng_GB
 pyramid.includes =
     pyramid_debugtoolbar
 
-available_languages = [('eng_GB', 'English'), ('swa_KE', 'Swahili (Kenya)'), ('swa_TZ', 'Swahili (Tanzania)'), ('tha_TH', 'Thai'), ('ind_ID', 'Bahasa')]
+available_languages = [('eng_GB', 'English')]
 
 git.path = %(here)s/repo/
-git.content_repo_url = https://github.com/universalcore/unicore-cms-content-ffl-tanzania
-es.index_prefix = 'ffl-tanzania'
+git.content_repo_url = https://github.com/universalcore/unicore-cms-content-mnm-tanzania
+es.index_prefix = 'mnm-tanzania'
 
 beaker.cache.type = ext:memcached
 beaker.cache.url = 127.0.0.1:11211
@@ -62,7 +62,7 @@ port = 8000
 ###
 
 [loggers]
-keys = root, unicorecmsffl
+keys = root, unicorecmsmnm
 
 [handlers]
 keys = console
@@ -74,10 +74,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_unicorecmsffl]
+[logger_unicorecmsmnm]
 level = DEBUG
 handlers =
-qualname = unicorecmsffl
+qualname = unicorecmsmnm
 
 [handler_console]
 class = StreamHandler
