--- a/development.ini
+++ b/development.ini
@@ -17,8 +17,8 @@ pyramid.includes =
 available_languages = [('eng_GB', 'English')]
 
 git.path = %(here)s/repo/
-git.content_repo_url = https://github.com/universalcore/unicore-cms-content-mnm-sn-prod
-es.index_prefix = 'mnm-sn'
+git.content_repo_url = https://github.com/universalcore/unicore-cms-content-mnm-za-qa
+es.index_prefix = mnm-za
 
 beaker.cache.type = ext:memcached
 beaker.cache.url = 127.0.0.1:11211
