--- a/development.ini
+++ b/development.ini
@@ -18,7 +18,7 @@ available_languages = [('eng_GB', 'English')]
 
 git.path = %(here)s/repo/
 git.content_repo_url = https://github.com/universalcore/unicore-cms-content-mnm-za-qa
-es.index_prefix = mnm-za
+es.index_prefix = unicore-cms-content-mnm-za-qa
 
 beaker.cache.type = ext:memcached
 beaker.cache.url = 127.0.0.1:11211
@@ -33,8 +33,7 @@ cache.short_term.expire = 60
 cache.default_term.expire = 300
 cache.long_term.expire = 3600
 
-CELERY_ALWAYS_EAGER = true
-CELERY_ACCEPT_CONTENT = ['json', 'msgpack', 'yaml']
+[celery]
 CELERY_DEFAULT_QUEUE = 'unicore_cms'
 CELERY_RESULT_BACKEND = redis://localhost:6379/0
 BROKER_URL = redis://localhost:6379/0
