add language selector

--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = eng_GB
 pyramid.includes =
     pyramid_debugtoolbar
 
-available_languages = [('eng_GB', 'English')]
+available_languages = [('eng_GB', 'English'), ('spa_ES', 'Spanish')]
 
 git.path = %(here)s/repo/
 git.content_repo_url = https://github.com/universalcore/unicore-cms-content-mnm-za-qa
