add language selector

--- a/development.ini
+++ b/development.ini
@@ -14,6 +14,8 @@ pyramid.default_locale_name = eng_GB
 pyramid.includes =
     pyramid_debugtoolbar
 
+thumbor.security_key = aef7Ohghie8toi
+
 available_languages = [('eng_GB', 'English'), ('spa_ES', 'Spanish'), ('urd_PK', 'Urdu')]
 
 git.path = %(here)s/repo/
